--- a/config/locales/clearance.en.yml
+++ b/config/locales/clearance.en.yml
@@ -2,8 +2,7 @@
 en:
   clearance_mailer:
     change_password:
-      closing: If you didn't request this, ignore this email. Your password has
-        not been changed.
+      closing: If you didn't request this, ignore this email. Your password has not been changed.
       link_text: Change my password
       opening: "Someone, hopefully you, requested we send you a link to change
         your password:"
